# Agente_Citas

./: .bandit  .coveragerc  .env.example  .env.langgraph  .gitignore  .mcp.json  .pre-commit-config.yaml  .watchfilesignore  ADMIN_API_IMPLEMENTATION.md  ADMIN_API_TEST_REPORT.md  ARCHITECTURE.md  CLAUDE.md  COMPLETE_GUIDE.md  CONFIG_GUIDE.md  CORRECCIONES_DEYY_AGENT.md  DentiLook_Servicios_Precios(1).csv  Dockerfile  ERRORES_API.md  FASE_2_SUMMARY.md  FASE_4_SUMMARY.md  GOOGLE_CALENDAR_SETUP.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  INSTRUCCIONES_INSTALACION.md  INTEGRATION_TESTS_ISSUES.md  INTEGRITY_REVIEW.md  LANGCHAIN_COMPATIBILITY_UPDATE.md  MIGRATION_FIXES.md  Makefile  PLAN_MEMORIA_CONTEXTO.md  PROJECT_STATUS.md  README.md  REFACTORING_ROADMAP.md  TESTING_GUIDE.md  __init__.py  appointment_logic_audit.md  benchmark_light.py  benchmark_state_machine.json  cli.py  docker-compose.test.yml  (+25 more)
.claude/: settings.json
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
admin/: api.py
agents/: __init__.py  admin_agent.py  arcadium_agent.py  base_specialized_agent.py  context_vars.py  deyy_agent.py  deyy_agent_MIGRATION.py  deyy_agent_part1.txt  deyy_agent_part2.txt  langchain_compat.py  middleware_stub.py  router_agent.py  state_machine_agent.py  step_configs.py  support_agent.py  support_state.py  tools_state_machine.py
arcadium_automation/: __main__.py
benchmarks/: benchmark_performance.py
chains/: arcadium_chains.py  divisor_chain.py
config/: calendar_mapping.py
core/: __init__.py  auth.py  config.py  exceptions.py  landchain.py  orchestrator.py  resilience.py  startup.py  state.py  store.py
db/: README.md  __init__.py  create_schema_simple.py  migrate.py  models.py  seed_default_project.py  verify.py
docs/: AGENT_NODE_IMPROVEMENTS.md  ARQUITECTURA_AGENTES_ESPECIALIZADOS.md  CORRECCIONES_DUPLICACION_Y_DISPONIBILIDAD.md  DEPENDENCY_ANALYSIS.md  DEPENDENCY_COMPATIBILITY_PLAN.md  FASE_3_SUMMARY.md  FASE_4_DOCUMENTACION.md  FASE_4_RESUMEN_FINAL.md  IMPLEMENTATION_PLAN_LANGCHAIN.md  MIGRACION_LANGGRAPH.md  PLAN_IMPLEMENTACION_AGENTES_ESPECIALIZADOS.md  PLAN_MEMORIA_CONTEXTO.md
examples/: test_webhook.py  use_agent.py  using_specialized_agents.py
graphs/: appointment_graph.py  arcadium_graph.py  deyy_graph.py
memory/: __init__.py  memory_manager.py  postgres_memory.py
memory_agent_integration/: __init__.py  config.py  memory_agent_backend.py  memory_tools.py
scripts/: analyze_booking_flow.py  clear_memory.py  create_test_project.py  diagnostic_memory.py  migrate_state.py  review_langsmith_logs.py  setup_composio.py  test_agent_interactive.py  test_appointment_payload.json  test_appointment_payload2.json  test_booking_e2e.py  test_cancel_direct.py  test_cancel_payload.json  test_cancel_with_id_payload.json  test_checkpoint_recovery.py  test_db_connection.py  test_dedup.py  test_deyy_graph.py  test_e2e_agent.py  test_e2e_state_machine.py  test_evolution_format.py  test_get_citas_payload.json  test_multi_doctor_booking.py  test_normalization.py  test_phone_normalization.py  test_real_number.py  test_state_machine_agent.py  test_store_integration.py  test_user_conversation.py  truncate_tables.py  typecheck.sh  validate_configs.py  verify_empty.py
services/: __init__.py  appointment_service.py  calendar_sync_service.py  chatwoot_service.py  composio_calendar_service.py  google_calendar_service.py  patient_memory_service.py  project_appointment_service.py  reminder_service.py  whatsapp_service.py
src/: __init__.py  agent.py  agent.py.save  cache.py  calendar_service.py  confirmation_interceptor.py  edges.py  edges_v2.py  graph.py  graph_v2.py  intent_router.py  llm_extractors.py  nodes.py  nodes_backup.py  nodes_v2.py  schemas_v2.py  state.py  store.py  studio_graph.py  utils.py  webhook_handler.py
static/: chat.js
templates/: chat.html
tests/: aggressive_curl_test.sh  conftest.py  interactive_curl_test.sh  test_agent_deyy.py  test_booking_aggressive.py  test_booking_edge_cases.py  test_booking_nodes.py  (+14 more)
(+49 files in other folders)
